--- a/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
+++ b/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
@@ -19,20 +19,20 @@
         {{ 'HOME' | translate }}
       </a>
 
-<div class="language-selector" aria-label="Selector de idioma">
-  <button (click)="changeLanguage('es')" aria-label="Cambiar a español">
-    <img src="https://flagcdn.com/w40/es.png" alt="Español" class="flag" />
-  </button>
+      <div class="language-selector" aria-label="Selector de idioma">
+        <button (click)="changeLanguage('es')" aria-label="Cambiar a español">
+          <img src="https://flagcdn.com/w40/es.png" alt="Español" class="flag" />
+        </button>
 
-  <button (click)="changeLanguage('en')" aria-label="Switch to English">
-    <img src="https://flagcdn.com/w40/gb.png" alt="English" class="flag" />
-  </button>
+        <button (click)="changeLanguage('en')" aria-label="Switch to English">
+          <img src="https://flagcdn.com/w40/gb.png" alt="English" class="flag" />
+        </button>
 
-  <button (click)="changeLanguage('gl')" aria-label="Cambiar a galego">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg"
-         alt="Galego" class="flag" />
-  </button>
-</div>
+        <button (click)="changeLanguage('gl')" aria-label="Cambiar a galego">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Flag_of_Galicia.svg" alt="Galego"
+            class="flag" />
+        </button>
+      </div>
 
 
 
