add developer info section with logo, name, email and GitHub link

--- a/everload-front/src/app/components/about-app/about-app.component.html
+++ b/everload-front/src/app/components/about-app/about-app.component.html
@@ -1,4 +1,4 @@
-<section class="platforms">
+<section class="platforms"> 
   <div class="platforms-inner">
     <h2 class="title">Hover and Click the Icons</h2>
 
@@ -23,4 +23,16 @@
       </a>
     </div>
   </div>
+</section>
+
+<section class="about-container">
+  <img src="/assets/d646dfa2-a6d1-40df-83a5-167bd30240fd.png" alt="Logo" class="logo" />
+  <h1>Xián Durán Taboada</h1>
+  <p class="description">Desarrollador y creador de esta aplicación</p>
+  <p class="by">📧 xiandt01@gmail.com</p>
+
+  <a class="github-link" href="https://github.com/xianDT01" target="_blank" rel="noopener noreferrer">
+    <img src="/assets/github-icon.png" alt="GitHub" />
+    Visitar GitHub
+  </a>
 </section>
