--- a/everload-front/src/app/components/about-app/about-app.component.html
+++ b/everload-front/src/app/components/about-app/about-app.component.html
@@ -1,6 +1,6 @@
 <section class="platforms"> 
   <div class="platforms-inner">
-    <h2 class="title">Hover and Click the Icons</h2>
+    <h2 class="title">EverLoad</h2>
 
     <div class="icons">
       <a class="icon fb" href="#" aria-label="Facebook">
@@ -25,14 +25,14 @@
   </div>
 </section>
 
-<section class="about-container">
-  <img src="/assets/d646dfa2-a6d1-40df-83a5-167bd30240fd.png" alt="Logo" class="logo" />
+<section class="about-container clean-about">
+  <p class="role-label">Desarrollador</p>
   <h1>Xián Durán Taboada</h1>
-  <p class="description">Desarrollador y creador de esta aplicación</p>
+  <p class="description">Creador de esta aplicación</p>
   <p class="by">📧 xiandt01@gmail.com</p>
 
   <a class="github-link" href="https://github.com/xianDT01" target="_blank" rel="noopener noreferrer">
     <img src="/assets/github-icon.png" alt="GitHub" />
-    Visitar GitHub
+
   </a>
 </section>
