--- a/everload-front/src/app/components/about-app/about-app.component.html
+++ b/everload-front/src/app/components/about-app/about-app.component.html
@@ -1,12 +1,33 @@
+  <button class="home-button" routerLink="/">{{ 'HOME' | translate }}</button>
+  <div class="lang-switch">
+    <button class="lang-btn" [class.active]="currentLang()==='es'" (click)="setLang('es')">ES</button>
+    <button class="lang-btn" [class.active]="currentLang()==='gl'" (click)="setLang('gl')">GL</button>
+    <button class="lang-btn" [class.active]="currentLang()==='en'" (click)="setLang('en')">EN</button>
+  </div>
 <section class="about-platforms">
   <div class="developer-center">
     <div class="developer-card">
-      <p class="role-label">Desarrollador</p>
-      <h1>Xián Durán Taboada</h1>
-      <p class="description">Creador de esta aplicación</p>
-      <p class="by">📧 xiandt01@gmail.com</p>
-      <a class="github-link" href="https://github.com/xianDT01" target="_blank" rel="noopener noreferrer">
-        <img src="/assets/github-icon.png" alt="GitHub" />
+      <div class="brand-badge">
+        <img src="../../../assets/about-xianDT.png" alt="EverLoad logo">
+      </div>
+
+       <p class="role-label">{{ 'ABOUT.ROLE' | translate }}</p>
+      <h1>{{ 'ABOUT.NAME' | translate:{ name:'Xián Durán Taboada' } }}</h1>
+      <p class="description">{{ 'ABOUT.CREATOR' | translate }}</p>      
+      <p class="by">📧 {{ 'ABOUT.EMAIL' | translate:{ email:'xiandt01@gmail.com' } }}</p>
+      <a class="github-link" href="https://github.com/xianDT01" target="_blank" rel="noopener">
+        <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 005.47 7.59c.4.07.55-.17.55-.38 
+    0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13
+    -.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 
+    2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 
+    0-.87.31-1.59.82-2.15-.08-.2-.36-1.01.08-2.12 
+    0 0 .67-.21 2.2.82a7.68 7.68 0 012.01-.27c.68 0 1.36.09 
+    2.01.27 1.53-1.04 2.2-.82 2.2-.82.44 1.11.16 1.92.08 
+    2.12.51.56.82 1.27.82 2.15 
+    0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 
+    0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.001 8.001 0 008 0z" />
+        </svg>
         GitHub
       </a>
     </div>
