--- a/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.css
+++ b/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.css
@@ -51,7 +51,7 @@
   gap: 12px;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 0;
 }
 
 .language-selector button {
@@ -443,10 +443,11 @@ button:active {
     padding: 10px;
   }
 
-  .left-header {
-    flex-direction: column;
-    gap: 10px;
-  }
+ .left-header {
+  display: flex;
+  align-items: center; 
+  gap: 20px;
+}
 
   .home-button {
     align-self: flex-end;
